# bzip2-embedded

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeOptions.txt  COMPILING.md  Cargo.toml  Makefile-libbz2_so  Makefile.am  blocksort.c  bzip2.doap  bzip2recover.c  bzlib.c  bzlib.h  bzlib_private.h  compress.c  configure.ac  crc32.c  crc32test.c  decompress.c  huffman.c  libbz2.dsp  makefile.msc  manual.html  manual.ps  manual.xml  meson.build  randtable.c
bzlib_rust/: Cargo.toml
bzlib_rust/src/: crc32.rs  lib.rs  rand_table.rs
docs/: manual.xml
tests/: CMakeLists.txt  README.md  large_test.py  meson.build  quick_test.py  testcase.py
